# tboard-rs

./: Cargo.toml  README.md  basics.py  build.rs
.github/workflows/: rust-ci.yml
examples/: read.rs
src/: error.rs  lib.rs  reader.rs  resource_handle.proto  summary.proto  writer.rs
tboard/: Cargo.toml
tboard-pyo3/: Cargo.toml  pyproject.toml
tboard-pyo3/src/: lib.rs
tboard/examples/: read.rs
tboard/src/: error.rs  event.proto  lib.rs  tensor.proto  tensor_description.proto  writer.rs
