[package]
name = "tboard"
version = "0.1.0"
edition = "2021"

description = "Write and read tensorboard files."
repository = "https://github.com/LaurentMazare/tboard-rs"
keywords = ["tensorboard", "pytorch", "deep-learning"]
categories = ["science"]
license = "MIT/Apache-2.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
thiserror = "1.0.50"
prost = "0.12.1"
byteorder = "1.5.0"
crc = "3.0.1"
hostname = "0.3.1"

[build-dependencies]
prost-build = "0.12.1"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
timens = "0.1.9"
